# sharp_iron

./: .gitignore  Cargo.toml  README.md  appveyor.yml  build.rs  build_c_lib.bat
clr_c_api/: clr_c_api.sln
clr_c_api/RustAppDomainManager/: CustomAppDomainManager.cs  RustAppDomainManager.csproj  RustAppDomainManager.snk
clr_c_api/RustAppDomainManager/Properties/: AssemblyInfo.cs
clr_c_api/TestAssembly/: Program.cs  TestAssembly.csproj  test_assembly.snk.pfx
clr_c_api/TestAssembly/Properties/: AssemblyInfo.cs
clr_c_api/clr_c_api/: Source.def  clr_c_api.c  clr_c_api.cpp  clr_c_api.h  clr_c_api.vcxproj  clr_c_api.vcxproj.filters  dllmain.cpp  stdafx.h  wrapper.h
clr_rust/: Cargo.toml  build.rs
clr_rust/src/: lib.rs
src/: lib.rs
src/clr/: app_domain.rs  assembly.rs  c_api.rs  error.rs  field.rs  host_control.rs  metahost.rs  method.rs  misc.rs  mod.rs  object_handle.rs  runtime_host.rs  runtime_info.rs  type_.rs
src/clr/bindings/: core.rs  custom.rs  enums.rs  mod.rs
